# DD-OS

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_V2_FIELDS.md  CLAUDE.md  DD-OS.bat  DD-OS.command  Dockerfile  MEMORY.md  README.md  SKILL_PACKAGING_GUIDE.md  SOUL.md  THEME_ANALYSIS_REPORT.md  create_platform_economy_ppt.py  create_yuhang_high_quality_ppt.py  create_yuhang_high_quality_ppt_enhanced.py  ddos-local-server.py  ddos-server.spec  docker-compose.yml  docker-entrypoint.sh  index.html  mcp-servers.json  package-lock.json  package.json  requirements.txt  start-ddos.bat  start-ddos.sh  start-standalone.bat  start.bat  start.sh  stop-ddos.bat  tailwind.config.js  vite.config.ts  平台经济高质量发展.pptx
.clawhub/: lock.json
data/: llm_config.json
memory/: 2026-02-19.md  2026-02-20.md  2026-02-22.md  2026-02-23.md  2026-02-24.md
openclaw-extension/: .npmignore  index.ts  package-lock.json  tsconfig.json
registry/: mcp-servers.json  skills.json
scripts/: build-standalone.bat  build-tauri.bat  check-disk.ps1  install-buildtools.ps1  install-rust-d.ps1  install-rust.ps1  migrate-skills.py  set-rust-env.bat
skills/: __init__.py  mcp_client.py  mcp_manager.py
skills/blucli/: SKILL.md
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/icons/: icon.icns
src-tauri/resources/openclaw-extension/: openclaw.plugin.json  package.json
src-tauri/resources/openclaw-extension/src/: nexus-manager.ts
src-tauri/src/: main.rs
writing/: 十年刻度-10章优化版.md  十年刻度-10章初稿.md  十年刻度-10章详细大纲.md  十年刻度-小说初稿.md
(+303 files in other folders)
